force-app/main/default/objects/SVMXC__PM_Schedule__c/fields/SVMXC__Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Last_Run_Date__c</fullName>
    <label>Last Run Date</label>
    <type>Date</type>
</CustomField>