force-app/main/default/objects/SVMXC__PM_Schedule__c/fields/SVMXC__PM_Schedule_Definition__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__PM_Schedule_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Schedule Definition</label>
    <referenceTo>SVMXC__PM_Schedule_Definition__c</referenceTo>
    <relationshipLabel>PM Schedule</relationshipLabel>
    <relationshipName>PM_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>