force-app/main/default/objects/SVMXC__PM_Schedule__c/fields/SVMXC__Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Scheduled_On__c</fullName>
    <label>Scheduled On</label>
    <type>Date</type>
</CustomField>